{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 171,
  "lineage": "b24b22b7-e5f5-924b-a460-241add125f7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0990b5436c23d79a5",
            "arn": "arn:aws:ec2:us-east-1:533267142840:elastic-ip/eipalloc-0990b5436c23d79a5",
            "domain": "vpc",
            "id": "eipalloc-0990b5436c23d79a5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-212-170-18.compute-1.amazonaws.com",
            "public_ip": "44.212.170.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "testing-nat-eip-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-nat-eip-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.private_instance",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:533267142840:instance/i-05a456d6b1df5a92c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a456d6b1df5a92c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c8ac2c0dad9b4d3",
            "private_dns": "ip-10-0-10-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf9d1d5640d5b11a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02ce2116739edfa02"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088b57e5783daafac",
            "tags": {
              "Name": "testing-private-instance",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-private-instance",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ce2116739edfa02"
            ]
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:533267142840:instance/i-053d592fa96b94a5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053d592fa96b94a5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a2a8f355e6975d4",
            "private_dns": "ip-10-0-1-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-54-221-41-29.compute-1.amazonaws.com",
            "public_ip": "54.221.41.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08dab0dd02e16a72c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02ce2116739edfa02"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ba812c72f42247b",
            "tags": {
              "Name": "testing-public-instance",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-public-instance",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ce2116739edfa02"
            ]
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:internet-gateway/igw-03a285e31c92d18ab",
            "id": "igw-03a285e31c92d18ab",
            "owner_id": "533267142840",
            "tags": {
              "Name": "testing-igw",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-igw",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0990b5436c23d79a5",
            "association_id": "eipassoc-0cd0af80bd4951bb7",
            "connectivity_type": "public",
            "id": "nat-0eb32f9643c2d1f7e",
            "network_interface_id": "eni-07ebbec3cd856327c",
            "private_ip": "10.0.1.5",
            "public_ip": "44.212.170.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ba812c72f42247b",
            "tags": {
              "Name": "testing-nat-gateway",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-nat-gateway",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.private_instance",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:route-table/rtb-02095e2e3893dc70f",
            "id": "rtb-02095e2e3893dc70f",
            "owner_id": "533267142840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb32f9643c2d1f7e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-rt_private",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-rt_private",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.private_instance",
            "aws_nat_gateway.nat",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:route-table/rtb-0d62d53883e8739ad",
            "id": "rtb-0d62d53883e8739ad",
            "owner_id": "533267142840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a285e31c92d18ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-rt_public",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-rt_public",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06de59b800104da11",
            "route_table_id": "rtb-02095e2e3893dc70f",
            "subnet_id": "subnet-088b57e5783daafac"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.private_instance",
            "aws_nat_gateway.nat",
            "aws_route_table.rt_private",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb6be83d2420b3ee",
            "route_table_id": "rtb-02095e2e3893dc70f",
            "subnet_id": "subnet-060c07d20bd7541fa"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.private_instance",
            "aws_nat_gateway.nat",
            "aws_route_table.rt_private",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082f735466cdb3d2a",
            "route_table_id": "rtb-02095e2e3893dc70f",
            "subnet_id": "subnet-097420b86bc767158"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.private_instance",
            "aws_nat_gateway.nat",
            "aws_route_table.rt_private",
            "aws_security_group.test_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c44a1225702a81",
            "route_table_id": "rtb-0d62d53883e8739ad",
            "subnet_id": "subnet-00ba812c72f42247b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09de82da8485eb2e5",
            "route_table_id": "rtb-0d62d53883e8739ad",
            "subnet_id": "subnet-0a52187b2e7da0027"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080486fbd14e501d1",
            "route_table_id": "rtb-0d62d53883e8739ad",
            "subnet_id": "subnet-09cbd1269a9ea5958"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet",
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:security-group/sg-02ce2116739edfa02",
            "description": "Allow SSH, HTTPS and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ce2116739edfa02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "testing-test-sg",
            "name_prefix": "",
            "owner_id": "533267142840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-test-sg",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-test-sg",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-088b57e5783daafac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088b57e5783daafac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-private_subnet-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-private_subnet-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-060c07d20bd7541fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c07d20bd7541fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-private_subnet-2",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-private_subnet-2",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-097420b86bc767158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097420b86bc767158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-private_subnet-3",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-private_subnet-3",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-00ba812c72f42247b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ba812c72f42247b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-public_subnet-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-public_subnet-1",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-0a52187b2e7da0027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a52187b2e7da0027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-public_subnet-2",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-public_subnet-2",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:subnet/subnet-09cbd1269a9ea5958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cbd1269a9ea5958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267142840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testing-public_subnet-3",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing-public_subnet-3",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "vpc_id": "vpc-0dbcab392aade1dee"
          },
          "dependencies": [
            "aws_vpc.testing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267142840:vpc/vpc-0dbcab392aade1dee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0b2ab0b4cf704bd",
            "default_route_table_id": "rtb-0552c9b9f1a5289b5",
            "default_security_group_id": "sg-003ec03e3e5dfc813",
            "dhcp_options_id": "dopt-0d3ca9201bf9e6474",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbcab392aade1dee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0552c9b9f1a5289b5",
            "owner_id": "533267142840",
            "tags": {
              "Name": "testing",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            },
            "tags_all": {
              "Name": "testing",
              "Owner": "test_team",
              "TeamDL": "rajesh.r.ambur@gmail.com",
              "costcenter": "Mumbai-01",
              "environment": "Development"
            }
          }
        }
      ]
    }
  ]
}